src/lib/regexParser.ts
// Generated from regexParser.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import regexParserListener from "./regexParserListener.js";
import regexParserVisitor from "./regexParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class regexParser extends Parser {
	public static readonly LPAREN = 1;
	public static readonly RPAREN = 2;
	public static readonly PIPE = 3;
	public static readonly PLUS = 4;
	public static readonly QUESTION = 5;
	public static readonly STAR = 6;
	public static readonly WildcardEsc = 7;
	public static readonly Char = 8;
	public static readonly StartQuantity = 9;
	public static readonly SingleCharEsc = 10;
	public static readonly MultiCharEsc = 11;
	public static readonly CatEsc = 12;
	public static readonly ComplEsc = 13;
	public static readonly NegCharGroup = 14;
	public static readonly PosCharGroup = 15;
	public static readonly EndQuantity = 16;
	public static readonly QuantExact = 17;
	public static readonly COMMA = 18;
	public static readonly EndCategory = 19;
	public static readonly IsCategory = 20;
	public static readonly Letters = 21;
	public static readonly Marks = 22;
	public static readonly Numbers = 23;
	public static readonly Punctuation = 24;
	public static readonly Separators = 25;
	public static readonly Symbols = 26;
	public static readonly Others = 27;
	public static readonly IsBlock = 28;
	public static readonly NestedSingleCharEsc = 29;
	public static readonly NestedMultiCharEsc = 30;
	public static readonly NestedCatEsc = 31;
	public static readonly NestedComplEsc = 32;
	public static readonly NestedNegCharGroup = 33;
	public static readonly NestedPosCharGroup = 34;
	public static readonly EndCharGroup = 35;
	public static readonly DASH = 36;
	public static readonly XmlChar = 37;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_root = 0;
	public static readonly RULE_regExp = 1;
	public static readonly RULE_branch = 2;
	public static readonly RULE_piece = 3;
	public static readonly RULE_quantifier = 4;
	public static readonly RULE_quantity = 5;
	public static readonly RULE_quantRange = 6;
	public static readonly RULE_quantMin = 7;
	public static readonly RULE_atom = 8;
	public static readonly RULE_charClass = 9;
	public static readonly RULE_charClassExpr = 10;
	public static readonly RULE_charGroup = 11;
	public static readonly RULE_posCharGroup = 12;
	public static readonly RULE_charRange = 13;
	public static readonly RULE_seRange = 14;
	public static readonly RULE_charOrEsc = 15;
	public static readonly RULE_charClassEsc = 16;
	public static readonly RULE_catEsc = 17;
	public static readonly RULE_complEsc = 18;
	public static readonly RULE_charProp = 19;
	public static readonly literalNames: (string | null)[] = [ null, "'('", 
                                                            "')'", "'|'", 
                                                            "'+'", "'?'", 
                                                            "'*'", "'.'", 
                                                            null, "'{'", 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            "','", null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, "']'", 
                                                            "'-'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "LPAREN", 
                                                             "RPAREN", "PIPE", 
                                                             "PLUS", "QUESTION", 
                                                             "STAR", "WildcardEsc", 
                                                             "Char", "StartQuantity", 
                                                             "SingleCharEsc", 
                                                             "MultiCharEsc", 
                                                             "CatEsc", "ComplEsc", 
                                                             "NegCharGroup", 
                                                             "PosCharGroup", 
                                                             "EndQuantity", 
                                                             "QuantExact", 
                                                             "COMMA", "EndCategory", 
                                                             "IsCategory", 
                                                             "Letters", 
                                                             "Marks", "Numbers", 
                                                             "Punctuation", 
                                                             "Separators", 
                                                             "Symbols", 
                                                             "Others", "IsBlock", 
                                                             "NestedSingleCharEsc", 
                                                             "NestedMultiCharEsc", 
                                                             "NestedCatEsc", 
                                                             "NestedComplEsc", 
                                                             "NestedNegCharGroup", 
                                                             "NestedPosCharGroup", 
                                                             "EndCharGroup", 
                                                             "DASH", "XmlChar" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"root", "regExp", "branch", "piece", "quantifier", "quantity", "quantRange", 
		"quantMin", "atom", "charClass", "charClassExpr", "charGroup", "posCharGroup", 
		"charRange", "seRange", "charOrEsc", "charClassEsc", "catEsc", "complEsc", 
		"charProp",
	];
	public get grammarFileName(): string { return "regexParser.g4"; }
	public get literalNames(): (string | null)[] { return regexParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return regexParser.symbolicNames; }
	public get ruleNames(): string[] { return regexParser.ruleNames; }
	public get serializedATN(): number[] { return regexParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, regexParser._ATN, regexParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public root(): RootContext {
		let localctx: RootContext = new RootContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, regexParser.RULE_root);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 40;
			this.regExp();
			this.state = 41;
			this.match(regexParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public regExp(): RegExpContext {
		let localctx: RegExpContext = new RegExpContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, regexParser.RULE_regExp);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 43;
			this.branch();
			this.state = 48;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===3) {
				{
				{
				this.state = 44;
				this.match(regexParser.PIPE);
				this.state = 45;
				this.branch();
				}
				}
				this.state = 50;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public branch(): BranchContext {
		let localctx: BranchContext = new BranchContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, regexParser.RULE_branch);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 54;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 3758161282) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 7) !== 0)) {
				{
				{
				this.state = 51;
				this.piece();
				}
				}
				this.state = 56;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public piece(): PieceContext {
		let localctx: PieceContext = new PieceContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, regexParser.RULE_piece);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 57;
			this.atom();
			this.state = 59;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 624) !== 0)) {
				{
				this.state = 58;
				this.quantifier();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public quantifier(): QuantifierContext {
		let localctx: QuantifierContext = new QuantifierContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, regexParser.RULE_quantifier);
		try {
			this.state = 68;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 5:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 61;
				this.match(regexParser.QUESTION);
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 62;
				this.match(regexParser.STAR);
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 63;
				this.match(regexParser.PLUS);
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 64;
				this.match(regexParser.StartQuantity);
				this.state = 65;
				this.quantity();
				this.state = 66;
				this.match(regexParser.EndQuantity);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public quantity(): QuantityContext {
		let localctx: QuantityContext = new QuantityContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, regexParser.RULE_quantity);
		try {
			this.state = 73;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 70;
				this.quantRange();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 71;
				this.quantMin();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 72;
				this.match(regexParser.QuantExact);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public quantRange(): QuantRangeContext {
		let localctx: QuantRangeContext = new QuantRangeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, regexParser.RULE_quantRange);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 75;
			this.match(regexParser.QuantExact);
			this.state = 76;
			this.match(regexParser.COMMA);
			this.state = 77;
			this.match(regexParser.QuantExact);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public quantMin(): QuantMinContext {
		let localctx: QuantMinContext = new QuantMinContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, regexParser.RULE_quantMin);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 79;
			this.match(regexParser.QuantExact);
			this.state = 80;
			this.match(regexParser.COMMA);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public atom(): AtomContext {
		let localctx: AtomContext = new AtomContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, regexParser.RULE_atom);
		try {
			this.state = 88;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 8:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 82;
				this.match(regexParser.Char);
				}
				break;
			case 7:
			case 10:
			case 11:
			case 12:
			case 13:
			case 14:
			case 15:
			case 29:
			case 30:
			case 31:
			case 32:
			case 33:
			case 34:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 83;
				this.charClass();
				}
				break;
			case 1:
				this.enterOuterAlt(localctx, 3);
				{
				{
				this.state = 84;
				this.match(regexParser.LPAREN);
				this.state = 85;
				this.regExp();
				this.state = 86;
				this.match(regexParser.RPAREN);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public charClass(): CharClassContext {
		let localctx: CharClassContext = new CharClassContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, regexParser.RULE_charClass);
		try {
			this.state = 93;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 10:
			case 11:
			case 12:
			case 13:
			case 29:
			case 30:
			case 31:
			case 32:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 90;
				this.charClassEsc();
				}
				break;
			case 14:
			case 15:
			case 33:
			case 34:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 91;
				this.charClassExpr();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 92;
				this.match(regexParser.WildcardEsc);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public charClassExpr(): CharClassExprContext {
		let localctx: CharClassExprContext = new CharClassExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, regexParser.RULE_charClassExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 95;
			_la = this._input.LA(1);
			if(!(((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 1572867) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 96;
			this.charGroup();
			this.state = 97;
			this.match(regexParser.EndCharGroup);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public charGroup(): CharGroupContext {
		let localctx: CharGroupContext = new CharGroupContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, regexParser.RULE_charGroup);
		let _la: number;
		try {
			this.state = 114;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 100;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 7, this._ctx) ) {
				case 1:
					{
					this.state = 99;
					this.posCharGroup();
					}
					break;
				}
				this.state = 102;
				this.match(regexParser.DASH);
				this.state = 103;
				this.match(regexParser.DASH);
				this.state = 104;
				this.charClassExpr();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 105;
				this.posCharGroup();
				this.state = 106;
				this.match(regexParser.DASH);
				this.state = 107;
				this.charClassExpr();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 109;
				this.posCharGroup();
				this.state = 111;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===36) {
					{
					this.state = 110;
					this.match(regexParser.DASH);
					}
				}

				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 113;
				this.match(regexParser.DASH);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public posCharGroup(): PosCharGroupContext {
		let localctx: PosCharGroupContext = new PosCharGroupContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, regexParser.RULE_posCharGroup);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 117;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===36) {
				{
				this.state = 116;
				this.match(regexParser.DASH);
				}
			}

			this.state = 121;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 121;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 11, this._ctx) ) {
				case 1:
					{
					this.state = 119;
					this.charRange();
					}
					break;
				case 2:
					{
					this.state = 120;
					this.charClassEsc();
					}
					break;
				}
				}
				this.state = 123;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (((((_la - 10)) & ~0x1F) === 0 && ((1 << (_la - 10)) & 142082063) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public charRange(): CharRangeContext {
		let localctx: CharRangeContext = new CharRangeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, regexParser.RULE_charRange);
		try {
			this.state = 127;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 125;
				this.seRange();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 126;
				this.match(regexParser.XmlChar);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public seRange(): SeRangeContext {
		let localctx: SeRangeContext = new SeRangeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, regexParser.RULE_seRange);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 129;
			this.charOrEsc();
			this.state = 130;
			this.match(regexParser.DASH);
			this.state = 131;
			this.charOrEsc();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public charOrEsc(): CharOrEscContext {
		let localctx: CharOrEscContext = new CharOrEscContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, regexParser.RULE_charOrEsc);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 133;
			_la = this._input.LA(1);
			if(!(_la===10 || _la===37)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public charClassEsc(): CharClassEscContext {
		let localctx: CharClassEscContext = new CharClassEscContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, regexParser.RULE_charClassEsc);
		try {
			this.state = 141;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 10:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 135;
				this.match(regexParser.SingleCharEsc);
				}
				break;
			case 29:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 136;
				this.match(regexParser.NestedSingleCharEsc);
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 137;
				this.match(regexParser.MultiCharEsc);
				}
				break;
			case 30:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 138;
				this.match(regexParser.NestedMultiCharEsc);
				}
				break;
			case 12:
			case 31:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 139;
				this.catEsc();
				}
				break;
			case 13:
			case 32:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 140;
				this.complEsc();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public catEsc(): CatEscContext {
		let localctx: CatEscContext = new CatEscContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, regexParser.RULE_catEsc);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 143;
			_la = this._input.LA(1);
			if(!(_la===12 || _la===31)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 144;
			this.charProp();
			this.state = 145;
			this.match(regexParser.EndCategory);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public complEsc(): ComplEscContext {
		let localctx: ComplEscContext = new ComplEscContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, regexParser.RULE_complEsc);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 147;
			_la = this._input.LA(1);
			if(!(_la===13 || _la===32)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 148;
			this.charProp();
			this.state = 149;
			this.match(regexParser.EndCategory);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public charProp(): CharPropContext {
		let localctx: CharPropContext = new CharPropContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, regexParser.RULE_charProp);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 151;
			_la = this._input.LA(1);
			if(!(_la===20 || _la===28)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!regexParser.__ATN) {
			regexParser.__ATN = new ATNDeserializer().deserialize(regexParser._serializedATN);
		}

		return regexParser.__ATN;
	}


	static DecisionsToDFA = regexParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class RootContext extends ParserRuleContext {
	constructor(parser?: regexParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public regExp(): RegExpContext {
		return this.getTypedRuleContext(RegExpContext, 0) as RegExpContext;
	}
	public EOF(): TerminalNode {
		return this.getToken(regexParser.EOF, 0);
	}
    public get ruleIndex(): number {
    	return regexParser.RULE_root;
	}
	public enterRule(listener: regexParserListener): void {
	    if(listener.enterRoot) {
	 		listener.enterRoot(this);
		}
	}
	public exitRule(listener: regexParserListener): void {
	    if(listener.exitRoot) {
	 		listener.exitRoot(this);
		}
	}
	// @Override
	public accept<Result>(visitor: regexParserVisitor<Result>): Result {
		if (visitor.visitRoot) {
			return visitor.visitRoot(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class RegExpContext extends ParserRuleContext {
	constructor(parser?: regexParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public branch_list(): BranchContext[] {
		return this.getTypedRuleContexts(BranchContext) as BranchContext[];
	}
	public branch(i: number): BranchContext {
		return this.getTypedRuleContext(BranchContext, i) as BranchContext;
	}
	public PIPE_list(): TerminalNode[] {
	    	return this.getTokens(regexParser.PIPE);
	}
	public PIPE(i: number): TerminalNode {
		return this.getToken(regexParser.PIPE, i);
	}
    public get ruleIndex(): number {
    	return regexParser.RULE_regExp;
	}
	public enterRule(listener: regexParserListener): void {
	    if(listener.enterRegExp) {
	 		listener.enterRegExp(this);
		}
	}
	public exitRule(listener: regexParserListener): void {
	    if(listener.exitRegExp) {
	 		listener.exitRegExp(this);
		}
	}
	// @Override
	public accept<Result>(visitor: regexParserVisitor<Result>): Result {
		if (visitor.visitRegExp) {
			return visitor.visitRegExp(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class BranchContext extends ParserRuleContext {
	constructor(parser?: regexParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public piece_list(): PieceContext[] {
		return this.getTypedRuleContexts(PieceContext) as PieceContext[];
	}
	public piece(i: number): PieceContext {
		return this.getTypedRuleContext(PieceContext, i) as PieceContext;
	}
    public get ruleIndex(): number {
    	return regexParser.RULE_branch;
	}
	public enterRule(listener: regexParserListener): void {
	    if(listener.enterBranch) {
	 		listener.enterBranch(this);
		}
	}
	public exitRule(listener: regexParserListener): void {
	    if(listener.exitBranch) {
	 		listener.exitBranch(this);
		}
	}
	// @Override
	public accept<Result>(visitor: regexParserVisitor<Result>): Result {
		if (visitor.visitBranch) {
			return visitor.visitBranch(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class PieceContext extends ParserRuleContext {
	constructor(parser?: regexParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public atom(): AtomContext {
		return this.getTypedRuleContext(AtomContext, 0) as AtomContext;
	}
	public quantifier(): QuantifierContext {
		return this.getTypedRuleContext(QuantifierContext, 0) as QuantifierContext;
	}
    public get ruleIndex(): number {
    	return regexParser.RULE_piece;
	}
	public enterRule(listener: regexParserListener): void {
	    if(listener.enterPiece) {
	 		listener.enterPiece(this);
		}
	}
	public exitRule(listener: regexParserListener): void {
	    if(listener.exitPiece) {
	 		listener.exitPiece(this);
		}
	}
	// @Override
	public accept<Result>(visitor: regexParserVisitor<Result>): Result {
		if (visitor.visitPiece) {
			return visitor.visitPiece(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

